@@ -3,5 +3,5 @@ AUX d3lphin-0.9.2-rar.patch 1652 RMD160 5807acdc42d4d33c0b6aad111468f3c3d859bbc2
 AUX d3lphin-honour-terminal-settings.patch 1192 RMD160 586c7939605a2c5d007bb42f3adbfec42980644d SHA1 491eb2839aafde4018dbd9d5e7342fdf5499a28d SHA256 1df3bda15c8ca41426d9797f28d68413704d3e365c996072423271e77f228cca
 DIST d3lphin-0.9.2.tar.gz 2405159 RMD160 945b6afdae88e753d781588f43c13fe7004ba560 SHA1 5f8559adb65a002d339e5b43398146028b750937 SHA256 5bcfa2b9d365a72e86a5c52f2c8fa179c94d2aa701e3fdc87a8fbd9cbcc82ed1
 EBUILD d3lphin-0.9.2.ebuild 752 RMD160 74858c941da0746089703210976cb84dcb661481 SHA1 a8f9bbe7285edbc1f453b8db83c66a0759729ba9 SHA256 8ce740856bdd8284fc4f4d9dcf15df29e6bb0d78243536702ba034bb79a493d4
-MISC ChangeLog 381 RMD160 92da1190dab37620e92b33e4dbba43f0cab0bd09 SHA1 6a6404c901499a1bf4b5fe553b51a41660db9808 SHA256 ebfcc36885b18183b44a394e16756f92d9ed3efbf4871a1ea4ed3c538d73d168
+MISC ChangeLog 484 RMD160 bc739b65537b0f4175a38da90eb140049b4f359b SHA1 f3fcfcde83f4d6746d78c5f3d8ccb30fbf649f90 SHA256 a59528cd74bf3e0100c4975b1fd455ec99148a3966a61f5e858413557066bcec
 MISC metadata.xml 408 RMD160 6f4a3a2fc91fe8698b69bf8defd3f497a4a7e4ca SHA1 64074f3ad7d3fee372f34a23e17bce4154804c3e SHA256 85a7323f5a0c7734349a22c6741ed91ce7e09762c10595f9fc2cd2f36e59a525
