@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/d3lphin
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> +metadata.xml:
+  Use flags now in metadata (GLEP 56).
 
   13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> d3lphin-0.9.2.ebuild:
   Fixed EVERYTHING.
